test/corpus/2_lex-6_comments.txt
====================
LineComment
====================

// this is a comment

---

(source_file
  (line_comment))

====================
BlockComment
====================

/* this is a comment */

/* multi
   line
   comment */

/* no nesting /* */

/* no interior line comments // */

---

(source_file
  (block_comment)
  (block_comment)
  (block_comment)
  (block_comment))

====================
BlockComment 2
====================

int i;

/***************************************************/

---

(source_file
  (module
    (decl_defs
      (var_declarations
        (fundamental_type)
        (declarators
          (var_declarator
            (identifier))))))
  (block_comment))

====================
NestingBlockComment
====================

/+ this is a comment +/

/+ /+ nesting! +/ +/

/+ /* +/
/+ */ +/
/+ // +/

/+ /+/ +/ +/
/+ /+ +/+ +/

---

(source_file
  (nesting_block_comment)
  (nesting_block_comment)
  (nesting_block_comment)
  (nesting_block_comment)
  (nesting_block_comment)
  (nesting_block_comment)
  (nesting_block_comment))
